--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <link href="/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <video playsinline autoplay muted></video>
+    <video playsinline autoplay muted controls></video>
     <button id="enable-audio">Enable audio</button>
     <script>
       
