--- a/views/broadcast.html
+++ b/views/broadcast.html
@@ -15,7 +15,8 @@
       <select id="videoSource"></select>
     </section>
 
-    <video playsinline autoplay muted controls></video>
+    <video autoplay muted controls></video>
+    <button id="btn"></button>
     <script>
       
 let script1 = document.createElement("script");
