--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <video playsinline autoplay muted controls></video>
-    <button id="enable-audio">Enable audio</button>
+    <!--<button id="enable-audio">Enable audio</button>-->
     <script>
       
       let script1 = document.createElement("script");
