--- a/views/broadcast.html
+++ b/views/broadcast.html
@@ -24,9 +24,9 @@ script1.src = "https://cdn.socket.io/4.5.1/socket.io.js";
 let script2 = document.createElement("script");
 script2.src = "/broadcast.js";
 
-document.body.append(script1);
+document.body.appendChild(script1);
 script1.onload = () => {
-  document.body.append(script2);
+  document.body.appendChild(script2);
 };
 
     </script>
