--- a/views/index.html
+++ b/views/index.html
@@ -15,9 +15,9 @@
       let script2 = document.createElement("script");
       script2.src = "/watch.js";
       
-      document.body.append(script1);
+      document.body.appendChild(script1);
       script1.onload = () => {
-        document.body.append(script2);
+        document.body.appendChild(script2);
       };
       
           </script>
