--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
   <body>
     <video autoplay muted controls></video>
     <!--<button id="enable-audio">Enable audio</button>-->
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script>
       
       let script1 = document.createElement("script");
