--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,11 @@
-html {
+html, body {
   overflow: hidden;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 video {
-  width: 700px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
 }
